--- a/style.css
+++ b/style.css
@@ -57,3 +57,16 @@ input{
     text-align: center;
     cursor: pointer;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 70%;
+    margin: auto;
+  }
+
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
