--- a/style.css
+++ b/style.css
@@ -124,3 +124,44 @@ td, th {
     }
 }
 
+@media screen and (min-width: 1400px) {
+    .header h1{
+        font-size: 2.5rem;
+    }
+
+    .header_para{
+        font-size: 1.8rem;
+    }
+
+    #donald_img{
+       width: 350px;
+       height: 400px;
+       padding: 10px;
+       margin: 10px; 
+    }
+
+    .cash_amount{
+        font-size: 2rem;
+    }
+
+    input{
+        font-size: 1.4rem;
+    }
+
+    #submit_btn{
+        font-weight: bold;
+        font-size: 1.5rem;
+        width: 100px;
+        height: 55px;
+        padding: 0;
+    }
+
+    #table{
+        font-size: 1.8rem;
+    }
+
+    .footer_img{
+        width: 40px;
+    }
+}
+
