--- a/style.css
+++ b/style.css
@@ -124,6 +124,45 @@ td, th {
     }
 }
 
+
+@media screen and (min-width: 1020px) {
+    .header h1{
+        font-size: 2rem;
+    }
+
+    .header_para{
+        font-size: 1.3rem;
+    }
+
+    #donald_img{
+       width: 300px;
+       height: 350px;
+       padding: 10px;
+       margin: 10px; 
+    }
+
+    .cash_amount{
+        font-size: 1.5rem;
+    }
+
+    input{
+        font-size: 1rem;
+    }
+
+    #submit_btn{
+        font-weight: bold;
+        font-size: 1rem;
+        width: 100px;
+        height: 55px;
+        padding: 0;
+    }
+
+    #table{
+        font-size: 1.1rem;
+    }
+}
+
+
 @media screen and (min-width: 1400px) {
     .header h1{
         font-size: 2.5rem;
